envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
